--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>تحدي الابتكار GovJam 2024 | هيئة الحكومة الرقمية</title>
+    <!-- page style -->
     <link rel="stylesheet" href="style/style.css">
+    <!-- page icon -->
     <link rel="icon" href="imgs/favicon.ico">
 </head>
 
@@ -76,6 +78,53 @@
             <a href="#" class="btn btn-primary">سجل الآن</a>
         </div>
     </main>
+
+    <!-- hero info -->
+
+    <div class="hero-info">
+        <div class="container hero-info-container">
+            <div class="item">
+                <div class="item-title">تاريخ التسجيل </div>
+                <div class="item-content">
+                    <div class="item-info">
+                        من : 29/09/2024
+                    </div>
+                    <div class="item-info">
+                        إلى : 29/09/2024
+                    </div>
+                </div>
+            </div>
+            <div class="item">
+                <div class="item-title">موقع الفعالية </div>
+                <div class="item-content">
+                    <div class="item-info">
+                        مدينة الرياض
+                    </div>
+                    <div class="item-info">
+                        ملتقى المدينة، مدينة محمد بن سلمان
+                    </div>
+                </div>
+            </div>
+            <div class="item">
+                <div class="item-title"> نوع الفعالية </div>
+                <div class="item-content">
+                    <div class="item-info">
+                        هاكثون وتحديات
+                    </div>
+                </div>
+            </div>
+            <div class="item">
+                <div class="item-title"> الجمهور المستهدف </div>
+                <div class="item-content">
+                    <div class="item-info">
+                        لكل مهتم بالابتكار وتصميم الخدمات والتقنيات الناشئة
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- javaScript -->
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="js/main.js"></script>
